--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{
+ {
+    "start": "node app.js",
     "name": "docker",
     "version": "0.0.2",
     "dependencies": {
@@ -7,3 +8,4 @@
         "path": "^0.12.7"
     }
 }
+
